--- a/apis.yml
+++ b/apis.yml
@@ -10,8 +10,7 @@ created: '2024-12-03'
 modified: '2024-12-22'
 position: Consuming
 description: >-
-  © 2024 United States National Guard ELIGIBILITY. What It Takes; How to Join;
-  Basic Training; Currently Serving; Prior Service
+  The Army National Guard
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
